--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,9 @@ android {
         resValue "string", "maps_api_key", (secureProps.getProperty("MAPS_API_KEY") ?: "")
 
     }
+    buildFeatures {
+        viewBinding true
+    }
 
     buildTypes {
         release {
