--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Tue Nov 03 15:30:54 CET 2020
-sdk.dir=C\:\\Users\\pontu\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\waads\\AppData\\Local\\Android\\Sdk
