--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Nov 03 15:30:54 CET 2020
-sdk.dir=C\:\\Users\\waads\\AppData\\Local\\Android\\Sdk
+#Wed Nov 11 14:37:20 CET 2020
+sdk.dir=C\:\\Users\\vikto\\AppData\\Local\\Android\\Sdk
