--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Nov 12 13:34:38 CET 2020
-sdk.dir=D\:\\androidSdkLocation
+#Tue Nov 17 14:45:15 CET 2020
+sdk.dir=/Users/storm/Library/Android/sdk
