--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Nov 17 14:45:15 CET 2020
-sdk.dir=/Users/storm/Library/Android/sdk
+#Tue Nov 17 17:09:20 CET 2020
+sdk.dir=C\:\\Users\\vikto\\AppData\\Local\\Android\\Sdk
