--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Nov 17 17:09:20 CET 2020
-sdk.dir=C\:\\Users\\waads\\AppData\\Local\\Android\\Sdk
+#Thu Nov 19 19:46:19 GMT 2020
+sdk.dir=C\:\\Users\\pontu\\AppData\\Local\\Android\\Sdk
