--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,8 +49,10 @@ dependencies {
 
     //retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.8.6'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation"com.squareup.okhttp3:okhttp:4.9.0"
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation"com.squareup.okhttp3:logging-interceptor:4.9.0"
 
     //maps
     implementation 'com.google.maps.android:maps-utils-ktx:2.2.0'
