--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Nov 26 21:38:28 CET 2020
-sdk.dir=C\:\\Users\\waads\\AppData\\Local\\Android\\Sdk
+#Sat Nov 28 16:08:27 CET 2020
+sdk.dir=/Users/storm/Library/Android/sdk
