--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.StudentBeer">
-        <activity android:name=".view.GiveAccessActivity"></activity>
+        <activity android:name=".view.MissingPermissionsActivity"></activity>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
