Small UI update. Review uploades to firebase. -review is handled with cloudfunction.

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Nov 26 21:38:28 CET 2020
-sdk.dir=C\:\\Users\\waads\\AppData\\Local\\Android\\Sdk
+#Fri Nov 27 08:05:48 CET 2020
+sdk.dir=C\:\\Users\\pontu\\AppData\\Local\\Android\\Sdk
