--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Dec 02 11:17:12 CET 2020
-sdk.dir=C\:\\Users\\waads\\AppData\\Local\\Android\\Sdk
+#Wed Dec 02 15:06:14 CET 2020
+sdk.dir=C\:\\Users\\pontu\\AppData\\Local\\Android\\Sdk
