--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Dec 03 12:32:23 CET 2020
-sdk.dir=/Users/storm/Library/Android/sdk
+#Thu Dec 03 17:40:26 CET 2020
+sdk.dir=C\:\\Users\\vikto\\AppData\\Local\\Android\\Sdk
